# todo-evolution

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  verify_implementation.py
.claude/: settings.local.json
.claude/agents/: backend-specialist.md  cloud-architect.md  devops-master.md  frontend-specialist.md  hackathon-master.md  spec-architect.md
.specify/memory/: constitution.md
hackathon-todo/: .gitignore  CLAUDE.md  README.md  tmpclaude-2495-cwd
hackathon-todo/backend/: pyproject.toml  tmpclaude-98d9-cwd
hackathon-todo/backend/src/: __init__.py  auth.py  config.py  db.py  main.py  models.py
hackathon-todo/frontend/: CLAUDE.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
hackathon-todo/frontend/app/: globals.css  layout.tsx  page.tsx
hackathon-todo/frontend/components/: AddTaskForm.tsx  ChatPageContent.tsx  ChatSidebar.tsx  ClientAnimations.tsx  CombinedDashboardPage.tsx  LoadingSpinner.tsx  MobileMenu.tsx  ResponsiveLayout.tsx  TaskDashboard.tsx  TaskItem.tsx  TaskList.tsx
hackathon-todo/frontend/lib/: api.ts  auth.ts
hackathon-todo/frontend/types/: index.ts
hackathon-todo/phase-3/ai_agents/: runner.py  todo_agent.py
hackathon-todo/phase-3/mcp_server/: server.py  test_server.py
hackathon-todo/specs/001-web-todo/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
history/prompts/001-web-todo/: 001-generate-tasks.tasks.prompt.md  1-web-todo-spec.spec.prompt.md  (+1 more)
phase-1/: README.md
phase-1/src/: main.py  models.py  todo.py
(+56 files in other folders)
