[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.14.5",
    "jose>=1.0.0",
    "mcp-use>=1.6.0",
    "openai-agents>=0.7.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
